Fixed font resolution

--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -7,7 +7,7 @@
 	font-style: normal;
 	font-weight: 300 900;
 	font-display: swap;
-	src: url(Rubik.woff2) format('woff2');
+	src: url(/Rubik.woff2) format('woff2');
 }
 
 :root {
