Added color theme for the page shadow
Just so that everything is under the themes control

--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -28,6 +28,7 @@
 
 	--background: #fffffb;
 	--page: #fffffb;
+	--shadow: rgba(0, 0, 0, 0.25);
 	--aside: #1f5195;
 	--border: #1c1c1caa;
 }
@@ -41,6 +42,7 @@
 
 		--background: #0c0c0c;
 		--page: #1c1c1c;
+		--shadow: transparent;
 		--aside: #1a2e44;
 		--border: #1f5195aa;
 	}
